# POBot

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: analyzes_models.py  config.py  const.py  interview_repository.py  processor.py  user_story_service.py
common/: file_utils.py  logger.py  text_utils.py
resources/interviews/: sistema_empresa_financeira_agropecuaria.txt  sistema_gestao_clinica_veterinaria.txt  sistema_telemarketing.txt  teste.txt
tests/app/: test_processor.py
tests/common/: test_file_utils.py  test_text_utils.py
